[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsproc"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  { name = "importThat" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "numpy >= 1.26.4",
  "matplotlib >= 3.8.4",
  "scipy >= 1.13.0"
]

[project.urls]
Documentation = ""
Issues = "https://github.com/importThat/dsproc/issues"
Source = "https://github.com/importThat/dsproc"


[tool.coverage.run]
source_pkgs = ["tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
dsproc = ["src/dsproc", "*/dsproc/src/dsproc"]
tests = ["tests", "*/dsproc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
